force-app/main/default/objects/Vaccine__c/Vaccine__c.object-meta.xml
<CustomObject>
    <label>Vaccine</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vaccines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>