force-app/main/default/objects/Vaccine__c/fields/Administered__c.field-meta.xml
<CustomField>
    <fullName>Administered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administered</label>
    <type>Checkbox</type>
</CustomField>