force-app/main/default/objects/Vaccine__c/fields/Administered_By__c.field-meta.xml
<CustomField>
    <fullName>Administered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>