force-app/main/default/objects/Vaccine__c/fields/Administered_Planned_On__c.field-meta.xml
<CustomField>
    <fullName>Administered_Planned_On__c</fullName>
    <label>Date Administered</label>
    <type>Date</type>
</CustomField>