force-app/main/default/objects/Vaccine__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth</fullName>
            </value>
            <value>
                <fullName>1-4 months</fullName>
            </value>
            <value>
                <fullName>2-4 months</fullName>
            </value>
            <value>
                <fullName>4-6 months</fullName>
            </value>
            <value>
                <fullName>6-9 months</fullName>
            </value>
            <value>
                <fullName>12-18 months</fullName>
            </value>
            <value>
                <fullName>12-24 months</fullName>
            </value>
            <value>
                <fullName>15-19 months</fullName>
            </value>
            <value>
                <fullName>2-18 years</fullName>
            </value>
            <value>
                <fullName>4-7 years</fullName>
            </value>
            <value>
                <fullName>9-18 years</fullName>
            </value>
            <value>
                <fullName>11-13 years</fullName>
            </value>
            <value>
                <fullName>13-16 years</fullName>
            </value>
            <value>
                <fullName>16-18 years</fullName>
            </value>
            <value>
                <fullName>18 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>