force-app/main/default/objects/Vaccine__c/fields/Coding_System_Name__c.field-meta.xml
<CustomField>
    <fullName>Coding_System_Name__c</fullName>
    <description>It is used to store the Code.</description>
    <label>Coding System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>