force-app/main/default/objects/Vaccine__c/fields/CVX_Code__c.field-meta.xml
<CustomField>
    <fullName>CVX_Code__c</fullName>
    <description>It is used to store the Code.</description>
    <inlineHelpText>Identifier for type of vaccine product used</inlineHelpText>
    <label>CVX Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>