force-app/main/default/objects/Vaccine__c/fields/Dosage_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Sequence__c</fullName>
    <inlineHelpText>The dose number within a series of doses</inlineHelpText>
    <label>Dosage Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>