force-app/main/default/objects/Vaccine__c/fields/Next_Dose_in_Series_After__c.field-meta.xml
<CustomField>
    <fullName>Next_Dose_in_Series_After__c</fullName>
    <inlineHelpText>Number of days after which the next dose is to be taken</inlineHelpText>
    <label>Next Dose in Series After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>