force-app/main/default/objects/Vaccine__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to select different Route from the list of template Routes.</description>
    <label>Route</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Route</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Vaccines</relationshipLabel>
    <relationshipName>Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>