force-app/main/default/objects/Vaccine__c/fields/Series_of_Doses__c.field-meta.xml
<CustomField>
    <fullName>Series_of_Doses__c</fullName>
    <inlineHelpText>The recommended number of doses for achieving immunity</inlineHelpText>
    <label>Series of Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>