force-app/main/default/objects/Vaccine__c/fields/Template_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Template_Vaccine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Vaccine</label>
    <referenceTo>Vaccine__c</referenceTo>
    <relationshipLabel>Vaccines</relationshipLabel>
    <relationshipName>Vaccines</relationshipName>
    <type>Lookup</type>
</CustomField>