force-app/main/default/objects/Vaccine__c/fields/Vaccination_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Expiration_Date__c</fullName>
    <description>This field is used to mention the vaccine expiration date.</description>
    <label>Vaccination Expiration Date</label>
    <type>Date</type>
</CustomField>