force-app/main/default/objects/Vaccine__c/fields/Vaccination_Refusal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Refusal_Reason__c</fullName>
    <description>This field is used to indicate the reason for vaccination refusal.</description>
    <label>Vaccination Refusal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>