force-app/main/default/objects/Vaccine__c/fields/Vaccine_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Manufacturer__c</fullName>
    <description>This field is used to mention the vaccine manufacturer.</description>
    <label>Vaccine Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>