force-app/main/default/objects/Vaccine__c/fields/Vaccine_Route__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Route__c</fullName>
    <label>Vaccine Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intradermal</fullName>
            </value>
            <value>
                <fullName>Intramuscular</fullName>
            </value>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>Intravenous</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Percutaneous</fullName>
            </value>
            <value>
                <fullName>Subcutaneous</fullName>
            </value>
            <value>
                <fullName>Transdermal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>