force-app/main/default/objects/Vaccine__c/fields/Vaccine_Series__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Series__c</fullName>
    <inlineHelpText>The name of the vaccine series</inlineHelpText>
    <label>Vaccine Series</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SARS-COV-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>