force-app/main/default/objects/Vaccine__c/fields/Vaccine_Site__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Site__c</fullName>
    <label>Vaccine Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Upper Arm</fullName>
            </value>
            <value>
                <fullName>Left Lower Forearm</fullName>
            </value>
            <value>
                <fullName>Left Thigh</fullName>
            </value>
            <value>
                <fullName>Right Upper Arm</fullName>
            </value>
            <value>
                <fullName>Right Lower Forearm</fullName>
            </value>
            <value>
                <fullName>Right Thigh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>