force-app/main/default/objects/Vaccine__c/recordTypes/Patient_Vaccine.recordType-meta.xml
<RecordType>
    <fullName>Patient_Vaccine</fullName>
    <active>true</active>
    <label>Patient Vaccine</label>
</RecordType>