force-app/main/default/objects/Vaccine__c/recordTypes/Template_Vaccine.recordType-meta.xml
<RecordType>
    <fullName>Template_Vaccine</fullName>
    <active>true</active>
    <label>Template Vaccine</label>
</RecordType>